Fixed alignment of header elements

--- a/app/globals.css
+++ b/app/globals.css
@@ -76,10 +76,6 @@ body {
   width: 80px;
 }
 
-.header-wrapper {
-  width: 860px;
-}
-
 .hero-container {
   width: 840px;
   background-color: #202020;
@@ -107,6 +103,7 @@ body {
   .hero-container {
     width: 630px;
   }
+  
 }
 
 @media (max-width: 767px) {
@@ -258,17 +255,14 @@ body {
 .header-shadow:before { 
   content: '';
   position: absolute;
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
-  /* left: 0px; */
-  /* top: 0px; */
   text-align: center;
   font-size: 1em;
   font-weight: 800;
   filter: blur(14px);
   z-index: -1;
   border-radius: 24px;
-  /* transform: scale(1.7); */
 }
 
 .header-shadow-anim-start {
@@ -277,12 +271,14 @@ body {
 }
 
 .header-shadow-anim:before {
+  width: 100%;
   animation: gradient-animation 6s infinite linear;
   background: linear-gradient(130deg,#ffc400 15%, #ff008c 50%, #0044ff 85%);
   background-size: 200% 200%;
 }
 
 .header-shadow-static:before {
+  width: 100%;
   background: linear-gradient(130deg,#ffc400 5%, #ff008c 50%, #0044ff 95%);
 }
 
